--- a/package.json
+++ b/package.json
@@ -2,19 +2,15 @@
   "name": "kirito-bot",
   "version": "1.0.0",
   "description": "Bot de WhatsApp Kirito-Bot con Baileys y comandos personalizados",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
-    "restart": "node index.js"
+    "start": "node src/index.js"
   },
   "author": "Manuvps22",
   "license": "MIT",
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.4"
-,
-    "fb-video-downloader": "^1.0.4"
+    "@whiskeysockets/baileys": "^6.7.4",
+    "fb-video-downloader": "^1.0.4",
+    "express": "^4.18.2"
   }
 }
